--- a/complex.html
+++ b/complex.html
@@ -15,33 +15,249 @@
     <title>Números complejos y armónicos</title>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   </head>
+
+
   <body>
-    <hr>
-    <h1>Números complejos y armónicos</h1>
-    <hr>
 
-    <p>
-      Recordemos que un número complejo se puede expresar de la forma $z=a+ib$, lo que permite identificar un número complejo con un un punto en el plano de coordenadas $(a,b)$.
-    </p>
 
-    <div id="divComplexPlane" class="plot" style="width:40vw; height:60vh"></div>
 
-    <p>
-      Vamos ahora con la exponencial compleja. Como vimos en el artículo $e^{it} = \cos t + i\sin t$, lo que nos permite representar el número complejo $e^{it}$ como un punto con coordenadas $(\cos t, \sin t)$ Este punto estará siempre sobre la circunferencia unidad, lo que deja patente la relación entre exponenciales complejas y armónicos.
-    </p>
 
-    <div id="divUnitCircle" class="plot" style="width:40vw; height:60vh"></div>
 
-    <form>
-      <input type="range" min="-10", max="10", step="0.016" name="bar" onmousemove="UC.t = this.form.bar.value; UC.plot();"
-       value = "0" > 
-    </form>
+    <div class="container titleSpace">
+      <hr>
+      <h1>Números complejos y armónicos</h1>
+      <hr>
+    </div>
 
-    <p>
-      Para hacer más clara la relación, vamos a dejar que $t$ represente el tiempo, de modo que el punto gire automáticamente, y a la vez vamos a ir dibujando la parte imaginaria en una gráfica. Si todo va bien, deberíamos obtener un seno.
-    </p>
+    <div class="container contentSpace">
+      <div class="row">
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default descriptionSpace">
+	    <div class="panel-body"> 
+	      <p>
+		Recordemos que un número complejo se puede expresar de la
+		forma $z=a+ib$, lo que permite identificar un número
+		complejo con un un punto en el plano de coordenadas
+		$(a,b)$.
+	      </p>
+	      <p>
+		Bla bla bla Blo blo blo bling bling bling
+	      </p>
+	    </div>
+	  </div>
+	</div>
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default graphSpace">
+	    <div class="panel-body"> 
+	      <div class="row">
+		<div class="col-sm-offset-3 col-sm-6">
+		  <div id="divComplexPlane" class="plot"></div>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+      </div>
 
-    <div id="divUnitCircleAnimated" class="plot" style="width:40vw; height:60vh"></div>
+
+
+      <div class="row">
+
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default descriptionSpace">
+	    <div class="panel-body"> 
+	      <p>
+		Vamos ahora con la exponencial compleja. Como vimos en el
+		artículo $e^{it} = \cos t + i\sin t$, lo que nos permite
+		representar el número complejo $e^{it}$ como un punto con
+		coordenadas $(\cos t, \sin t)$ Este punto estará siempre
+		sobre la circunferencia unidad, lo que deja patente la
+		relación entre exponenciales complejas y armónicos.
+	      </p>
+	      <form>
+		Con esta barra puedes mover el punto a lo largo de la circunferencia.
+		<input type="range" min="-10", max="10", step="0.016" name="bar"
+		       onmousemove="UC.t = this.form.bar.value; UC.plot();" value="0.52" >
+	      </form>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default graphSpace">
+	    <div class="panel-body"> 
+	      <div class="row">
+		<div class="col-sm-offset-3 col-sm-6">
+		  <div id="divUnitCircle" class="plot"></div>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+      </div>
+
+
+
+      <div class="row">
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default descriptionSpace">
+	    <div class="panel-body"> 
+	      <p>
+		Para hacer más clara la relación, vamos a dejar que $t$
+		represente el tiempo, de modo que el punto gire
+		automáticamente, y a la vez vamos a ir dibujando la parte
+		imaginaria en una gráfica. Si todo va bien, deberíamos
+		obtener un seno.
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default graphSpace">
+	    <div class="panel-body"> 
+	      <div id="divUnitCircleAnimated" class="plot"></div>
+	    </div>
+	  </div>
+	</div>
+      </div>
+
+
+
+      <div class="row">
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default descriptionSpace">
+	    <div class="panel-body"> 
+	      <p>
+		Poco a poco estamos ganando complejidad (chistaco de
+		números complejos). Para seguir con la analogía con las
+		series de Fourier complejas vamos a mirar ahora cómo
+		podemos representar sumas de senos. De la figura anterior
+		queda claro que el seno es la parte imaginaria de un punto
+		que se desplaza por un círculo.</p>
+
+	      <p>
+		Si queremos representar dos senos, vamos a coger dos
+		puntos. El primero de ellos se moverá sobre un círculo,
+		como hasta ahora. La novedad será un segundo círculo con
+		centro en el primer punto, y un segundo punto girando
+		sobre el segundo círculo.
+	      </p>
+
+	      <p>
+		Las flechas exteriores representan la suma de las partes
+		real e imaginaria (en blanco). Con las dos barras se puede
+		controlar la posición de los puntos.
+	      </p>
+
+	      <form>
+		<input type="range" min="-10", max="10", step="0.016" name="bar1" 
+		       onmousemove="TC.t1 = this.form.bar1.value; TC.plot();" value = "1" >
+		<input type="range" min="-10", max="10", step="0.016" name="bar2"
+		       onmousemove="TC.t2 = this.form.bar2.value; TC.plot();" value = "2.5">
+	      </form>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default graphSpace">
+	    <div class="panel-body"> 
+	      <div class="row">
+		<div class="col-sm-offset-2 col-sm-8">
+		  <div id="divTwoCircles" class="plot"></div>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+      </div>
+
+
+
+
+
+      <div class="row">
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default descriptionSpace">
+	    <div class="panel-body"> 
+	      <p>
+		Juntando todo lo anterior estamos en condiciones de
+		representar una animación de una suma de senos que
+		represente a una función. Por comoidad, vamos a tomar un
+		tren de pulsos rectangulares, ya que se escribe como \[
+		f(t) \approx \sin(t) + \frac{1}{3}\sin(3t) +
+		\frac{1}{5}\sin(5t) + ...  \] La amplitud de cada armónico
+		la controlaremos cambiando el radio del círculo, y luego
+		tendremos que ajustar los ángulos.
+	      </p>
+
+	      <p>
+		Notar que tendríamos problemas si la serie de Fourier
+		tiene senos y cosenos, porque la analogía gráfica no sería
+		tan inmediata
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default graphSpace">
+	    <div class="panel-body"> 
+	      <div id="divApproximation2" class="plot"></div>
+	    </div>
+	  </div>
+	</div>
+      </div>
+
+
+
+      <div class="row">
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default descriptionSpace">
+	    <div class="panel-body"> 
+	      <p>
+		Nada nos impide añadir más círculos para tener una
+		aproximacion mejor
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default graphSpace">
+	    <div class="panel-body"> 
+	      <div id="divApproximation3" class="plot"></div>
+	    </div>
+	  </div>
+	</div>
+      </div>
+
+
+
+      <div class="row">
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default descriptionSpace">
+	    <div class="panel-body"> 
+	      <p>
+		O bien....
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="col-sm-12 col-md-6">
+	  <div class="panel panel-default graphSpace">
+	    <div class="panel-body"> 
+	      <div id="divApproximation4" class="plot"></div>
+	    </div>
+	  </div>
+	</div>
+      </div>
+
+    </div>
+
 
 
 
@@ -54,11 +270,16 @@
     <script src="src/CP.js"></script>
     <script src="src/UC.js"></script>
     <script src="src/UCA.js"></script>
+    <script src="src/TC.js"></script>
+    <script src="src/AP2.js"></script>
+    <script src="src/AP3.js"></script>
+    <script src="src/AP4.js"></script>
     <script src="src/complex.js"></script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <!-- Include all compiled plugins (below), or include individual
+    files as needed -->
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
