adds new folder in src

--- a/complex.html
+++ b/complex.html
@@ -397,13 +397,13 @@
 
 
     <script src="lib/sceneDraw/sceneDraw.js"></script>
-    <script src="src/CP.js"></script>
-    <script src="src/UC.js"></script>
-    <script src="src/UCA.js"></script>
-    <script src="src/TC.js"></script>
-    <script src="src/AP2.js"></script>
-    <script src="src/AP3.js"></script>
-    <script src="src/AP4.js"></script>
+    <script src="src/scenes/CP.js"></script>
+    <script src="src/scenes/UC.js"></script>
+    <script src="src/scenes/UCA.js"></script>
+    <script src="src/scenes/TC.js"></script>
+    <script src="src/scenes/AP2.js"></script>
+    <script src="src/scenes/AP3.js"></script>
+    <script src="src/scenes/AP4.js"></script>
     <script src="src/complex.js"></script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
